# Metamorphic-Testing-for-Human-Trajectory-prediction

./: README.md  model.py  mt.py  mt_evaluation.py  newmts.py  predict.py  predict_notebook.py  pyproject.toml  requirements.txt
utils/: preprocessing_inD.py
