[project]
name = "ynet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8.16"
dependencies = [
    "imageio>=2.35.1",
    "ipykernel>=6.29.5",
    "matplotlib==3.2.2",
    "numpy<1.20",
    "opencv-python==4.4.0.46",
    "pandas==1.0.5",
    "plotnine>=0.7.0",
    "pot>=0.9.1",
    "pyyaml==5.3.1",
    "scikit-learn>=1.3.2",
    "scipy==1.5.0",
    "segmentation-models-pytorch==0.1.0",
    "torch==1.5.1",
    "torchvision==0.6.1",
    "tqdm==4.48.0",
]
